# RSET2022-26-S8-Beta

./: README.md
GROUP-7-Seismic-Monitoring-using-Distributive-Acoustic-Sensing/: Supervised_code.ipynb  app.py  autoencoder_code.ipynb
Gp15/: .gitignore
Groop 8 Ransomware Detection System/: lightgbm_preprocessing.py
Group 1 SweepX/src/: capture_image.py  dirt_model.py  gui.py  main.cpp  main.py  motor_control.py  pump.py
Group 10 Silent Speech Recognition/: README.md
Group 10 Silent Speech Recognition/Custom/: predict.py  (+6 more)
Group 11 QuietSOS-Fall Detection and Alerting System/: .gitignore  integrated.py  prefiltertest.py  quiet_sos_lstm_fall_detector.h5  quiet_sos_lstm_fall_detector_v2.h5  quiet_sos_lstm_fall_detector_v3.h5  realtime.py  realtime4.py  recorded.py  test_with_yolov8_pose.py  train_lstm_fall.py
Group 12 ClinicSync/: .gitignore  diabetes_test_with_id.csv
Group 3 XNFRec/: KG.html  NFH.html  full_pipeline_graph_250_nodes.gexf  graph_viz.py  kg_full_graph.html  main.py  nfh_belief_graph.html  nfh_only_graph_250_nodes.gexf  requirements.txt
Group 6 TITAN: Trash Interception and Termination Autonomous Navigator/titan_tui/: Cargo.toml  README.md
Group 6 TITAN: Trash Interception and Termination Autonomous Navigator/titan_tui/src/: main.rs
Group 7 Seismic Monitoring using Distributive Acoustic Sensing/: README.md  app.py
Group17 ISL-Translation/: BLSTM_train.py  dataset.py  extract.py  index.html  inference.py  mmpose_dset_extractor.py  package-lock.json  package.json  split.py  test.py  train.py  transcribe.py
SweepX-Group 1/: platformio.ini
(+309 files in other folders)
