[package]
name = "titan_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trident"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# ROS 2 Integration (Requires libclang-dev)
r2r = "0.9"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
